# bash_utils

./: .fuse_hidden000959aa00000001  .gitignore  README.md  alarm-timer  alarm_timer  automatic_screen_capture  backup  backup.sh  deepspeech-rec  git-to-ssh  hostblock  music_play_recursive_search  pclock  print-prep-slides  reboot-win  rm-noise  shutdown_and_restart.sh  wake-computer
applescript/: terminal
bash/: :w  activity  add-menu-entry  alarm-timer  automatic_screen_capture  battery-sound-alarm-monitor  brave-open-clipboard-link  copy-config  cron-git-backup  current_toggl_project.txt  deepspeech-rec  dotfiles  draw-image  exwm-Xephyr  flash-primary-screen  flip-monitor  get-volume  git-to-ssh  home-hdd-space-remaining  hostblock  lucid  macos-config  mapwacom  meditation  mem-status  monitor-internet-spped  mpv-rater  mpv-topl  music_play_recursive_search  my-xsetup  my-xsetup-dbus-hook  my-xsetup-onetime  new-svg-embed  nohup.out  notify-at  org-bak  parestart  pclock  pdf-merger  press-backspace  (+40 more)
fish/: 2fps-realtime-stamp  \  block-internet  borgmatic-1  chia-monitor  combine  combine.fish  configure-cameras  convert-to-post  dalle-3  day-info  e-newest-image  ex-audio-tracks  extract-obsidian  ffmpeg-remote  file-locker  fl-suspend  from-template  get-latest-image  get-org-file-word-counts  get-steno-lesson  get_org_file_word_counts.fish  gsay-clip  gsay-ram-monitor  hessen-inzidenz  is-this-good  jupyter-url  kb-layout-info  kb-layout-toggl  krita-pdf  lean-abbr  now  (+33 more)
python/camera-ptz/: camera-ptz.py  pyproject.toml  run.nix  shell.nix  test.py  test2.py
(+20 files in other folders)
